--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <!-- Load our React component. -->
-    <script type="text/babel" src="appp.js"></script>    <!--Here type="text/babel" is used to run JSX shortcut in React, it is used by removing type="text/javascript"-->
+    <script type="text/babel" src="app.js"></script>    <!--Here type="text/babel" is used to run JSX shortcut in React, it is used by removing type="text/javascript"-->
 </body>
 </html>
